fix z-Index + disable scrolling when menu is open

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ h4{
   overflow:hidden;
 }
 .btn{
+  cursor: pointer;
   border: 0;
   padding: 1rem 2rem;
   border-radius: .5rem;
