--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,23 +8,25 @@
   text-align: center;
   align-items: center;
   padding: 1.4rem;
-  position: relative;
+  position: fixed;
+  top: 0;
+  z-index: 10;
 }
 .navbar.hidden {
-  opacity: 0;
+  display: none;
 }
 .navbar-icon {
   width: 100%;
   flex: 1;
 }
 .navbar-icon img {
+  /* cursor: pointer; */
   width: 2.4rem;
-  cursor: pointer;
 }
 .navbar-logo {
   width: 100%;
   height: 100%;
-  flex: 10;
+  flex: 9;
 }
 .navbar-logo img {
   width: 7.8rem;
@@ -33,8 +35,8 @@
 .menu-list {
   background-color: var(--color-white);
   padding: 1.7rem;
-  opacity: 0;
-  height: 10vh;
+  opacity:0 ;
+  height: 100vh;
   flex: 100%;
   position: absolute;
   width: 100%;
@@ -45,7 +47,7 @@
   padding: 2.5rem;
 }
 .menu-list.show {
-  z-index: 2;
+  z-index: 11;
   opacity: 1;
   height: 100vh;
 }
@@ -149,4 +151,9 @@
   width: 100%;
   justify-content: center;
   gap: 3.5rem;
+}
+/* when menu opened disable scroll page */
+.fixed-position{
+  position: fixed;
+  width: 100%;
 }
