--- a/src/components/openFashionApp/OpenFashionApp.css
+++ b/src/components/openFashionApp/OpenFashionApp.css
@@ -1,11 +1,14 @@
 .open-fashion-app{
-    margin-top: 2rem;
+    margin-top: 9rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding-bottom: 10rem;
+    position: relative;
+    z-index: 5;
 }
+
 .open-fashion-app-title{
     letter-spacing: .3rem;
     margin-bottom: .5rem;
