--- a/src/components/productList/ProductList.css
+++ b/src/components/productList/ProductList.css
@@ -6,6 +6,7 @@
     gap: 2rem;
     row-gap: 3rem;
     margin-bottom: 4rem;
+    z-index: 5;
 }
 .showProduct{
     text-align: center;
